# Visual-Sorting-System

./: .gitignore  LICENSE  README.md
ESP32-S3_Firmware/include/: motor_control.h  state_manager.h
ESP32-S3_Firmware/src/: app_httpd.cpp  motor_control.cpp  sketch_may16a.ino  state_manager.cpp
PC_Application/: ocr_gui_pyside6.py  requirements.txt
RPi_CPP_OCR/: CMakeLists.txt  toolchain.cmake
RPi_CPP_OCR/include/: paddle_use_kernels.h  paddle_use_ops.h
STM32U5_Car_Firmware/: README.md
STM32U5_Car_Firmware/6-9.car/: .mxproject  car.ioc
STM32U5_Car_Firmware/6-9.car/Core/Inc/: main.h  stm32u5xx_hal_conf.h  tim.h
STM32U5_Car_Firmware/6-9.car/Core/Src/: gpio.c  icache.c  main.c  tim.c  usart.c
STM32U5_Car_Firmware/6-9.car/HardWare/oled/: dht11.c  oled_sw_i2c.c
STM32U5_Car_Firmware/6-9.car/MDK-ARM/: car.uvguix.19872  car.uvoptx  car.uvprojx
STM32U5_Car_Firmware/6-9.car/MDK-ARM/car/: car.axf  car.build_log.htm  car.hex  car.htm  car.lnp  car.map  car_car.dep  oled_sw_i2c.d  stm32u5xx_hal.d  stm32u5xx_hal_cortex.d  stm32u5xx_hal_dma.d  stm32u5xx_hal_dma_ex.d  stm32u5xx_hal_flash_ex.d  stm32u5xx_hal_gtzc.d  stm32u5xx_hal_i2c_ex.d  stm32u5xx_hal_msp.d  stm32u5xx_hal_pwr.d  stm32u5xx_hal_rcc.d  stm32u5xx_hal_tim_ex.d  stm32u5xx_hal_uart_ex.d  system_stm32u5xx.d  tim.d
STM32U5_Car_Firmware/6.car(now)/: car.ioc  car.txt
STM32U5_Car_Firmware/6.car(now)/Core/Inc/: stm32u5xx_it.h
STM32U5_Car_Firmware/6.car(now)/Core/Src/: adc.c  gpdma.c  gpio.c  (+4 more)
STM32U5_Car_Firmware/6.car(now)/MDK-ARM/: car.uvguix.19872
STM32U5_Car_Firmware/WiFiClient/: WiFiClient.ino
my_final_standalone_app/: CMakeLists.txt  README.md  keywords.txt  main.cpp  main.cpp.save  ppocr_keys_v3.txt
my_final_standalone_app/deploy/: cls_model.nb
(+29 files in other folders)
